fix: translation be

--- a/Fancy-weather/src/assets/locales/be/translation.json
+++ b/Fancy-weather/src/assets/locales/be/translation.json
@@ -1,6 +1,6 @@
 {
     "menu": {
-      "search": "Пошух"
+      "search": "Пошук"
     },
     "dayOfWeek": ["Нядзеля", "Панядзелак", "Аўторак", "Серада", "Чацвер", "Пятніца", "Субота"],
     "shortDayOfWeek": ["Нд", "Пн", "Аў", "Ср", "Чц", "Пт", "Сб"],
